# mynt_basic_algthms

./: .gitignore  CMakeLists.txt  README.md
docs/: MYNT公共算法库概要设计.md
include/: common.h
include/cv/: calib3d.h  corner_detector.h  image_filtering.h  types.h  undistort.h  visual_tracking.h  yimg.h
include/kinematics/: angle_axis.h  convertor.h  quarternion.h  rotation_matrix.h  transform.h
include/maths/: mat.h  math_basics.h  matrix.h  svd_fulluv.h  vector.h
src/cv/: calib3d.cpp  corner_detector.cpp  image_filtering.cpp  types.cpp  undistort.cpp  visual_tracking.cpp
src/kinematics/: convertor.cpp  quarternion.cpp  rotation_matrix.cpp
src/maths/: math_basics.cpp  matrix.cpp  svd_fulluv.cpp  vector.cpp
unit_test/: CMakeLists.txt  test_cv.cpp  test_kinematics.cpp  test_math.cpp
